# PlayingCardsDetection

./: .gitignore  CardDetector.ipynb  README.md  YoloCardTraining.ipynb  detect.py  pyproject.toml
